# dbflux

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_STYLE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES.md  cliff.toml  default.nix  deny.toml  flake.nix  shell.nix
crates/dbflux/: Cargo.toml
crates/dbflux/src/: access_manager.rs  app.rs  assets.rs  cli.rs  config_loader.rs  history_manager_sqlite.rs  hook_executor.rs  ipc_server.rs  main.rs  platform.rs
crates/dbflux/src/keymap/: actions.rs  chord.rs  command.rs  context.rs  defaults.rs  focus.rs  mod.rs
crates/dbflux/src/ui/: cell_editor_modal.rs  command_palette.rs  dangerous_query.rs  document_preview_modal.rs  dropdown.rs  editor.rs  history.rs  history_modal.rs  mod.rs  results.rs  sidebar.rs  sql_preview_modal.rs  status_bar.rs  tasks_panel.rs  theme.rs  toast.rs  tokens.rs  workspace.rs
crates/dbflux/tests/: architecture.rs  mcp_ui_governance_acceptance_tests.rs  panic_hook_resilience.rs
crates/dbflux_app/: Cargo.toml
crates/dbflux_app/src/: access_manager.rs  app_state.rs  aws_config_reflect_migration.rs  config_loader.rs  hook_executor.rs  lib.rs  mcp_command.rs  metric_catalog_cache.rs  portability.rs
crates/dbflux_app/src/keymap/: chord.rs  command.rs  mod.rs
crates/dbflux_app/src/rpc_services/: external_audit.rs  mod.rs
crates/dbflux_app/tests/: metric_catalog_cache_integration.rs
crates/dbflux_components/: Cargo.toml
crates/dbflux_components/src/: lib.rs  saved_chart.rs  semantic.rs  sql_preview.rs  style_guardrails.rs  theme.rs  tokens.rs
crates/dbflux_components/tests/: column_kind_contract.rs  result_panel_contract.rs  result_panel_slot_contract.rs
crates/dbflux_core/: Cargo.toml
crates/dbflux_core/src/: app_config.rs  code_generation.rs  connection_hook.rs  connection_manager.rs  connection_tree.rs  connection_tree_manager.rs  connection_tree_store.rs  crud.rs  document_id.rs  driver_capabilities.rs  driver_form.rs  error.rs  history.rs  history_manager.rs  key_value.rs  keymap_types.rs  language_service.rs  lib.rs  profile.rs  profile_manager.rs  query.rs  query_generator.rs  release_channel.rs  saved_query.rs  saved_query_manager.rs  schema.rs  schema_builder.rs  schema_node_id.rs  scripts_directory.rs  secret_manager.rs  secrets.rs  session_facade.rs  shutdown.rs  sql_dialect.rs  sql_generation.rs  sql_query_builder.rs  ssh_tunnel_manager.rs  store.rs  table_browser.rs  task.rs  (+2 more)
crates/dbflux_core/tests/: aggregate_spec_validation.rs  bridge_correlation_id.rs  column_kind_aggregate.rs  connection_contract.rs  connection_hooks.rs  generator_groupby.rs  is_grouped.rs  lib_exports.rs  saved_query_store.rs  tracing_bridge_filter.rs  tracing_bridge_overflow.rs  visual_query_serde.rs
crates/dbflux_driver_cloudwatch/: Cargo.toml  README.md
crates/dbflux_driver_cloudwatch/src/: dashboard_import.rs  dashboard_source.rs  driver.rs  lib.rs  metric_catalog.rs
crates/dbflux_driver_cloudwatch/tests/: metric_catalog_test.rs
crates/dbflux_driver_dynamodb/: Cargo.toml  README.md
crates/dbflux_driver_dynamodb/src/: driver.rs  query_generator.rs  query_parser.rs
crates/dbflux_driver_dynamodb/tests/: live_integration.rs
crates/dbflux_driver_influxdb/: Cargo.toml  README.md
crates/dbflux_driver_influxdb/src/: connection.rs  driver.rs  error_formatter.rs  http.rs  injection.rs  lib.rs  metadata.rs  query_generator.rs
crates/dbflux_driver_influxdb/tests/: live_integration.rs
crates/dbflux_driver_ipc/: Cargo.toml  README.md
crates/dbflux_driver_ipc/src/: driver.rs  lib.rs  transport.rs
crates/dbflux_driver_mongodb/: Cargo.toml  README.md
crates/dbflux_driver_mongodb/src/: driver.rs  instance_catalog.rs  language_service.rs  lib.rs  query_generator.rs  query_parser.rs
crates/dbflux_driver_mongodb/tests/: instance_catalog.rs  live_integration.rs
crates/dbflux_driver_mssql/: Cargo.toml  README.md
crates/dbflux_driver_mssql/src/: driver.rs  instance_catalog.rs  language_service.rs  lib.rs
crates/dbflux_driver_mssql/tests/: ddl_integration.rs  instance_catalog.rs  live_integration.rs
crates/dbflux_driver_postgres/: Cargo.toml  README.md
crates/dbflux_driver_postgres/src/: driver.rs  instance_catalog.rs  lib.rs
crates/dbflux_driver_postgres/tests/: instance_catalog.rs  live_integration.rs  relational_filter_live.rs
crates/dbflux_driver_redis/: Cargo.toml  README.md
crates/dbflux_driver_redis/src/: command_generator.rs  driver.rs  instance_catalog.rs  language_service.rs  lib.rs
crates/dbflux_driver_redis/tests/: instance_catalog.rs  live_integration.rs
crates/dbflux_export/: Cargo.toml
crates/dbflux_export/src/: csv.rs  lib.rs
crates/dbflux_ipc/: Cargo.toml
crates/dbflux_ipc/src/: audit.rs  auth.rs  auth_provider_client.rs  auth_provider_protocol.rs  driver_protocol.rs  envelope.rs  framing.rs  lib.rs  protocol.rs  socket.rs
crates/dbflux_ssh/: Cargo.toml
crates/dbflux_ssh/src/: lib.rs
crates/dbflux_storage/: Cargo.toml
crates/dbflux_storage/src/: artifacts.rs  bootstrap.rs  diagnostics.rs  error.rs  export.rs  legacy.rs  lib.rs  paths.rs  pending_executions.rs  reset.rs  sqlite.rs  sqlite_tree_store.rs
crates/dbflux_storage/tests/: aud_schema_tests.rs  audit_settings_migration_014.rs  bootstrap_accessor_tests.rs  get_applied_migrations_tests.rs  pending_executions_tests.rs
crates/dbflux_test_support/: Cargo.toml
crates/dbflux_test_support/src/: containers.rs  ddl_fixtures.rs  fake_driver.rs  fake_driver_rpc.rs  fixtures.rs  lib.rs
crates/dbflux_ui_base/: Cargo.toml
crates/dbflux_ui_base/src/: app_state_entity.rs  async_ext.rs  dashboard_manager.rs  file_dialog.rs  keymap.rs  lib.rs  modal_frame.rs  platform.rs  saved_chart_manager.rs  saved_query_manager.rs  sql_preview_modal.rs  sso_wizard.rs  style_guardrails.rs  toast.rs
crates/dbflux_ui_sidebar/: Cargo.toml
crates/dbflux_ui_sidebar/src/: code_generation.rs  context_menu.rs  expansion.rs  lib.rs  operations.rs  render.rs  render_footer.rs  render_overlays.rs  render_tree.rs  style_guardrails.rs  table_loading.rs  tree_builder.rs
(+753 files in other folders)
