[package]
name = "dbflux"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "dbflux"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
dbflux_core.workspace = true
dbflux_export.workspace = true
uuid.workspace = true
log.workspace = true
env_logger.workspace = true
dirs.workspace = true
rfd.workspace = true
fuzzy-matcher.workspace = true

[dependencies.dbflux_driver_sqlite]
workspace = true
optional = true

[dependencies.dbflux_driver_postgres]
workspace = true
optional = true

[features]
default = ["sqlite", "postgres"]
sqlite = ["dbflux_driver_sqlite"]
postgres = ["dbflux_driver_postgres"]
