[package]
name = "dbflux_core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
dirs = "5"
keyring = { version = "3", features = ["sync-secret-service"] }
log = "0.4"
