[package]
name = "dbflux_core"
edition.workspace = true
publish = false
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
dirs = "5"
keyring = { version = "3", features = ["sync-secret-service"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
