[package]
name = "dbflux_driver_cloudwatch"
version.workspace = true
edition.workspace = true
publish = false
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
dbflux_core.workspace = true
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-cloudwatchlogs = "1"
aws-sdk-cloudwatch = "1"
aws-sdk-sts = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
serde_json = "1"
async-trait = "0.1"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
