[package]
name = "dbflux_driver_influxdb"
version.workspace = true
edition.workspace = true
publish = false
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dbflux_core.workspace = true
reqwest = { workspace = true, default-features = false, features = ["blocking", "rustls-tls", "gzip"] }
csv = { workspace = true }
serde_json.workspace = true
chrono = { workspace = true }
urlencoding = { workspace = true }
thiserror.workspace = true
regex.workspace = true
log.workspace = true
base64 = { workspace = true }

[dev-dependencies]
dbflux_test_support.workspace = true
reqwest = { workspace = true, default-features = false, features = ["blocking", "rustls-tls"] }
serde_json.workspace = true

[lints]
workspace = true
