[package]
name = "dbflux_driver_ipc"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
dbflux_core = { path = "../dbflux_core" }
dbflux_ipc = { path = "../dbflux_ipc" }
interprocess.workspace = true
serde_json = { workspace = true }
uuid = { workspace = true }
log = "0.4"
thiserror = "2.0"

[dev-dependencies]
dbflux_test_support.workspace = true

[lib]
name = "dbflux_driver_ipc"
path = "src/lib.rs"

[package.metadata.cargo-machete]
# uuid::Uuid is used directly in src/transport.rs (line 15: `use uuid::Uuid`);
# machete misses it because the import comes from the workspace re-export path.
ignored = ["uuid"]
