[package]
name = "dbflux_driver_mssql"
version.workspace = true
edition.workspace = true
publish = false
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
dbflux_core = { path = "../dbflux_core" }
dbflux_ssh = { path = "../dbflux_ssh" }
chrono = { workspace = true }
hex.workspace = true
indexmap.workspace = true
log = "0.4"
serde_json = { workspace = true }
sha2.workspace = true
tiberius = { version = "0.12", default-features = false, features = ["chrono", "tds73", "rustls", "sql-browser-tokio"] }
tokio = { workspace = true, features = ["net", "io-util", "time", "macros"] }
tokio-util = { version = "0.7", features = ["compat"] }
urlencoding = "2"

[dev-dependencies]
dbflux_test_support.workspace = true

[lints]
workspace = true
