[package]
name = "dbflux_driver_postgres"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
dbflux_core = { path = "../dbflux_core" }
dbflux_ssh = { path = "../dbflux_ssh" }
log = "0.4"
postgres = "0.19"
native-tls = "0.2"
postgres-native-tls = "0.5"
uuid = { version = "1", features = ["v4"] }
