[package]
name = "dbflux_driver_redis"
version = "0.1.0"
edition.workspace = true
publish = false
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dbflux_core.workspace = true
dbflux_ssh.workspace = true
log.workspace = true
redis = { version = "0.27", features = ["tls-rustls"] }
serde_json.workspace = true
urlencoding = "2"
