[package]
name = "dbflux_export"
version = "0.1.0"
publish = false
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dbflux_core = { path = "../dbflux_core" }
csv = "1.3"
hex = "0.4"
thiserror = "2"

[dev-dependencies]
