[package]
name = "dbflux_export"
version.workspace = true
publish = false
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dbflux_core = { path = "../dbflux_core" }
base64 = "0.22"
csv = "1.3"
hex = "0.4"
serde_json = "1"
thiserror = "2"

[dev-dependencies]
