[package]
name = "dbflux_ipc"
edition.workspace = true
version.workspace = true
authors.workspace = true
description = "IPC protocol for DBFlux single-instance"
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
interprocess.workspace = true
dbflux_core.workspace = true
dbflux_storage.workspace = true
uuid.workspace = true
serde_json.workspace = true
secrecy = "0.10"
async-trait = { workspace = true }
log.workspace = true
