[package]
name = "dbflux_ssh"
version = "0.1.0"
publish = false
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dbflux_core = { path = "../dbflux_core" }
dirs = "6"
log = "0.4"
ssh2 = "0.9"
