[package]
name = "dbflux_ssh"
version.workspace = true
publish = false
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dbflux_core = { path = "../dbflux_core" }
dbflux_tunnel_core = { path = "../dbflux_tunnel_core" }
dbflux_storage = { path = "../dbflux_storage" }
base64 = { workspace = true }
dirs = { workspace = true }
log = "0.4"
sha2 = { workspace = true }
ssh2 = "0.9"
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"

[features]
vendored-openssl = ["ssh2/vendored-openssl"]
