[package]
name = "dbflux_storage"
publish = false
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dbflux_approval.workspace = true
dbflux_core.workspace = true
dirs.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

chrono = { workspace = true }

[dev-dependencies]
dbflux_policy.workspace = true
tempfile = "3"
uuid.workspace = true

[dev-dependencies.rusqlite]
workspace = true
features = ["trace"]
