[package]
name = "dbflux_test_support"
version = "0.1.0"
edition.workspace = true
publish = false
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dbflux_core.workspace = true
serde_json.workspace = true
