[package]
name = "dbflux_ui_base"
edition.workspace = true
version.workspace = true
authors.workspace = true
description = "App-state-aware UI base layer for DBFlux (AppStateEntity + GPUI event types)"
repository.workspace = true
homepage.workspace = true
license.workspace = true

[lib]

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
dbflux_app.workspace = true
dbflux_storage.workspace = true
dbflux_components.workspace = true
dbflux_core.workspace = true
dbflux_mcp = { workspace = true, optional = true }
uuid.workspace = true
log.workspace = true
anyhow = "1"

[features]
default = []
mcp = ["dbflux_mcp", "dbflux_app/mcp"]
lua = ["dbflux_app/lua"]
aws = ["dbflux_app/aws"]
